--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Install dependencies
-        run: yarn instakk==ll
+        run: yarn install
 
       - name: Run E2E tests
         run: yarn cypress run
