--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -2,10 +2,6 @@ name: Cypress Tests
 
 on:
   workflow_dispatch:
-    inputs:
-      cli:
-        description: Run by Cypress node command
-        default: node runner.js
 
 jobs:
   cypress-electron-tests:
@@ -21,5 +17,24 @@ jobs:
         run: yarn install
 
       - name: Run E2E tests
-        run: ${{ github.event.inputs.cli }}
-  
+        run: node runner-electron.js
+    env:
+      TARGET_TOKEN_ELECTRON: ${{ secrets.TARGET_TOKEN_ELECTRON }}
+
+  cypress-chrome-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers
+      options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4.2.2
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Run E2E tests
+        run: node runner-chrome.js
+    env:
+      TARGET_TOKEN_CHROME: ${{ secrets.TARGET_TOKEN_CHROME }}
